// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Evocon24HTimeInput > renders correctly when chip should be used 1`] = `
<evocon-v-input-stub
  filled="true"
  grow="false"
  modelvalue="12:12"
  placeholder="10:15"
  rules="true"
  truncateinput="false"
  type="text"
  usechip="true"
/>
`;

exports[`Evocon24HTimeInput > renders correctly when value exists 1`] = `
<evocon-v-input-stub
  filled="true"
  grow="false"
  modelvalue="12:12"
  placeholder="10:15"
  rules="true"
  truncateinput="false"
  type="text"
  usechip="false"
/>
`;

exports[`Evocon24HTimeInput > renders correctly with empty value 1`] = `
<evocon-v-input-stub
  filled="true"
  grow="false"
  placeholder="10:15"
  rules="true"
  truncateinput="false"
  type="text"
  usechip="false"
/>
`;
